@@ -70,14 +70,13 @@ namespace The
 using namespace PlaylistBrowserNS;
 
 QString PodcastCategory::s_configGroup( "Podcast View" );
-QString PodcastCategory::s_mergedViewKey( "Merged View" );
 
 PodcastCategory* PodcastCategory::s_instance = 0;
 
 PodcastCategory*
 PodcastCategory::instance()
 {
-    return s_instance ? s_instance : new PodcastCategory( The::podcastModel() );
+    return s_instance ? s_instance : new PodcastCategory( 0 );
 }
 
 void
@@ -90,9 +89,12 @@ PodcastCategory::destroy()
     }
 }
 
-PodcastCategory::PodcastCategory( PodcastModel *podcastModel )
-    : BrowserCategory( "podcasts", 0 )
-    , m_podcastModel( podcastModel )
+PodcastCategory::PodcastCategory( QWidget *parent )
+    : PlaylistBrowserCategory( Playlists::PodcastChannelPlaylist,
+                               "podcasts",
+                               s_configGroup,
+                               The::podcastModel(),
+                               parent )
 {
     setPrettyName( i18n( "Podcasts" ) );
     setShortDescription( i18n( "List of podcast subscriptions and episodes" ) );
@@ -104,107 +106,51 @@ PodcastCategory::PodcastCategory( PodcastModel *podcastModel )
 
     setImagePath( KStandardDirs::locate( "data", "amarok/images/hover_info_podcasts.png" ) );
 
-    resize(339, 574);
-    QSizePolicy sizePolicy(QSizePolicy::Expanding, QSizePolicy::Expanding);
-    sizePolicy.setHorizontalStretch(0);
-    sizePolicy.setVerticalStretch(0);
-    sizePolicy.setHeightForWidth( this->sizePolicy().hasHeightForWidth());
-    setSizePolicy( sizePolicy );
+//    QAction* addPodcastAction = new QAction( KIcon( "list-add-amarok" ), i18n("&Add Podcast"), toolBar );
+//    toolBar->addAction( addPodcastAction );
+//    connect( addPodcastAction, SIGNAL(triggered( bool )), m_podcastModel, SLOT(addPodcast()) );
 
-    setContentsMargins(0,0,0,0);
+//    QAction* updateAllAction = new QAction( KIcon("view-refresh-amarok"),
+//                                            i18n("&Update All"), toolBar );
+//    toolBar->addAction( updateAllAction );
+//    connect( updateAllAction, SIGNAL(triggered( bool )),
+//             m_podcastModel, SLOT(refreshPodcasts()) );
 
-    KToolBar *toolBar = new KToolBar( this, false, false );
-    toolBar->setToolButtonStyle( Qt::ToolButtonTextBesideIcon );
-
-    QAction* addPodcastAction = new QAction( KIcon( "list-add-amarok" ), i18n("&Add Podcast"), toolBar );
-    toolBar->addAction( addPodcastAction );
-    connect( addPodcastAction, SIGNAL(triggered( bool )), m_podcastModel, SLOT(addPodcast()) );
-
-    QAction* updateAllAction = new QAction( KIcon("view-refresh-amarok"),
-                                            i18n("&Update All"), toolBar );
-    toolBar->addAction( updateAllAction );
-    connect( updateAllAction, SIGNAL(triggered( bool )),
-             m_podcastModel, SLOT(refreshPodcasts()) );
-
-    //a QWidget with minimumExpanding makes the next button right aligned.
-    QWidget *spacerWidget = new QWidget( this );
-    spacerWidget->setSizePolicy( QSizePolicy::MinimumExpanding,
-                                 QSizePolicy::MinimumExpanding );
-    toolBar->addWidget( spacerWidget );
-
-    m_podcastTreeView = new PodcastView( podcastModel, this );
-    m_defaultItemDelegate = m_podcastTreeView->itemDelegate();
-
-    m_byProviderProxy = new PlaylistsByProviderProxy( podcastModel,
-                                                      PlaylistBrowserModel::ProviderColumn );
-    m_byProviderDelegate = new PlaylistTreeItemDelegate( m_podcastTreeView );
-
-    m_podcastTreeView->setFrameShape( QFrame::NoFrame );
-    m_podcastTreeView->setContentsMargins( 0, 0, 0, 0 );
-
-    KAction *toggleAction = new KAction( KIcon( "view-list-tree" ), QString(), toolBar );
-    toggleAction->setToolTip( i18n( "Merged View" ) );
-    toggleAction->setCheckable( true );
-    toggleAction->setChecked( Amarok::config( s_configGroup ).readEntry( s_mergedViewKey, true ) );
-    toolBar->addAction( toggleAction );
-    connect( toggleAction, SIGNAL( triggered( bool ) ), SLOT( toggleView( bool ) ) );
-    toggleView( toggleAction->isChecked() );
-
-    m_podcastTreeView->header()->hide();
-    m_podcastTreeView->setIconSize( QSize( 32, 32 ) );
-
-    m_podcastTreeView->setAlternatingRowColors( true );
-    m_podcastTreeView->setSelectionMode( QAbstractItemView::ExtendedSelection );
-    m_podcastTreeView->setSelectionBehavior( QAbstractItemView::SelectItems );
-    m_podcastTreeView->setDragEnabled( true );
-    m_podcastTreeView->setAcceptDrops( true );
-    m_podcastTreeView->setDropIndicatorShown( true );
-
-    for( int column = 1; column < podcastModel->columnCount(); ++ column )
-    {
-        m_podcastTreeView->hideColumn( column );
-    }
 
     //transparency
-    QPalette p = m_podcastTreeView->palette();
-    QColor c = p.color( QPalette::Base );
-    c.setAlpha( 0 );
-    p.setColor( QPalette::Base, c );
-
-    c = p.color( QPalette::AlternateBase );
-    c.setAlpha( 77 );
-    p.setColor( QPalette::AlternateBase, c );
-
-    m_podcastTreeView->setPalette( p );
-
-    QSizePolicy sizePolicy1(QSizePolicy::MinimumExpanding, QSizePolicy::Expanding);
-    sizePolicy1.setHorizontalStretch(0);
-    sizePolicy1.setVerticalStretch(0);
-    sizePolicy1.setHeightForWidth(m_podcastTreeView->sizePolicy().hasHeightForWidth());
-    m_podcastTreeView->setSizePolicy(sizePolicy1);
-
-    m_viewKicker = new ViewKicker( m_podcastTreeView );
-
-    connect( m_podcastTreeView, SIGNAL( clicked( const QModelIndex & ) ), this,
-             SLOT( showInfo( const QModelIndex & ) ) );
-
-    QAction *importOpmlAction = new QAction( KIcon("document-import")
-                                             , i18n( "Import OPML File" )
-                                             , toolBar
-                                         );
-    importOpmlAction->setToolTip( i18n( "Import OPML File" ) );
-    toolBar->addAction( importOpmlAction );
-    connect( importOpmlAction, SIGNAL( triggered() ), SLOT( slotImportOpml() ) );
+//    QPalette p = m_podcastTreeView->palette();
+//    QColor c = p.color( QPalette::Base );
+//    c.setAlpha( 0 );
+//    p.setColor( QPalette::Base, c );
+//
+//    c = p.color( QPalette::AlternateBase );
+//    c.setAlpha( 77 );
+//    p.setColor( QPalette::AlternateBase, c );
+//
+//    m_podcastTreeView->setPalette( p );
+//
+//    QSizePolicy sizePolicy1(QSizePolicy::MinimumExpanding, QSizePolicy::Expanding);
+//    sizePolicy1.setHorizontalStretch(0);
+//    sizePolicy1.setVerticalStretch(0);
+//    sizePolicy1.setHeightForWidth(m_podcastTreeView->sizePolicy().hasHeightForWidth());
+//    m_podcastTreeView->setSizePolicy(sizePolicy1);
+//
+//    QAction *importOpmlAction = new QAction( KIcon("document-import")
+//                                             , i18n( "Import OPML File" )
+//                                             , toolBar
+//                                         );
+//    importOpmlAction->setToolTip( i18n( "Import OPML File" ) );
+//    toolBar->addAction( importOpmlAction );
+//    connect( importOpmlAction, SIGNAL( triggered() ), SLOT( slotImportOpml() ) );
 
 }
 
 PodcastCategory::~PodcastCategory()
 {
-    delete m_viewKicker;
 }
 
 void
-PodcastCategory::showInfo( const QModelIndex & index )
+PodcastCategory::showInfo( const QModelIndex &index )
 {
     QVariantMap map;
     const int row = index.row();
@@ -343,7 +289,7 @@ PodcastCategory::slotImportOpml()
     if( !url.isEmpty() )
     {
         // user entered something and pressed OK
-        m_podcastModel->importOpml( url );
+        The::podcastModel()->importOpml( url );
     }
     else
     {
@@ -352,39 +298,7 @@ PodcastCategory::slotImportOpml()
     }
 }
 
-void
-PodcastCategory::toggleView( bool merged ) //SLOT
-{
-    if( merged )
-    {
-        m_podcastTreeView->setModel( m_podcastModel );
-        m_podcastTreeView->setItemDelegate( m_defaultItemDelegate );
-        m_podcastTreeView->setRootIsDecorated( true );
-    }
-    else
-    {
-        m_podcastTreeView->setModel( m_byProviderProxy );
-        m_podcastTreeView->setItemDelegate( m_byProviderDelegate );
-        m_podcastTreeView->setRootIsDecorated( false );
-    }
-
-    Amarok::config( s_configGroup ).writeEntry( s_mergedViewKey, merged );
-}
-
-ViewKicker::ViewKicker( QTreeView * treeView )
-{
-    DEBUG_BLOCK
-    m_treeView = treeView;
-}
-
-void
-ViewKicker::kickView()
-{
-    DEBUG_BLOCK
-    m_treeView->setRootIndex( QModelIndex() );
-}
-
-PodcastCategoryDelegate::PodcastCategoryDelegate( QTreeView * view )
+PodcastCategoryDelegate::PodcastCategoryDelegate( QTreeView *view )
     : QItemDelegate()
     , m_view( view )
 {
@@ -517,237 +431,4 @@ PodcastCategoryDelegate::sizeHint(const QStyleOptionViewItem & option, const QMo
     return QSize ( width, height );
 }
 
-PodcastView::PodcastView( PodcastModel *model, QWidget * parent )
-    : Amarok::PrettyTreeView( parent )
-    , m_podcastModel( model )
-    , m_pd( 0 )
-    , m_ongoingDrag( false )
-    , m_dragMutex()
-    , m_expandToggledWhenPressed( false )
-{
-}
-
-PodcastView::~PodcastView()
-{}
-
-void
-PodcastView::mousePressEvent( QMouseEvent *event )
-{
-    const QModelIndex index = indexAt( event->pos() );
-    if( !index.isValid() )
-    {
-        event->accept();
-        return;
-    }
-
-    const int actionCount =
-            index.data( PlaylistBrowserNS::PlaylistBrowserModel::ActionCountRole ).toInt();
-    if( actionCount > 0 )
-    {
-        const QRect rect = PlaylistTreeItemDelegate::actionsRect( index );
-        if( rect.contains( event->pos() ) )
-            return;
-    }
-
-    bool prevExpandState = isExpanded( index );
-
-    // This will toggle the expansion of the current item when clicking
-    // on the fold marker but not on the item itself. Required here to
-    // enable dragging.
-    Amarok::PrettyTreeView::mousePressEvent( event );
-
-    m_expandToggledWhenPressed = ( prevExpandState != isExpanded(index) );
-}
-
-void
-PodcastView::mouseReleaseEvent( QMouseEvent * event )
-{
-    const QModelIndex index = indexAt( event->pos() );
-    if( !index.parent().isValid() ) // not a root element, don't bother checking actions
-    {
-        const int actionCount =
-            index.data( PlaylistBrowserNS::PlaylistBrowserModel::ActionCountRole ).toInt();
-        if( actionCount > 0 )
-        {
-            const QRect rect = PlaylistTreeItemDelegate::actionsRect( index );
-            if( rect.contains( event->pos() ) )
-            {
-                QVariantList variantList =
-                        index.data( PlaylistBrowserNS::PlaylistBrowserModel::ActionRole ).toList();
-                if( variantList.isEmpty() )
-                    return;
-
-                QList<QAction*> actions = variantList.first().value<QList<QAction*> >();
-                //hack: rect height == the width of one action's area.
-                int indexOfActionToTrigger
-                    = ( event->pos().x() - rect.left() ) / rect.height();
-                debug() << "triggering action " << indexOfActionToTrigger;
-                if( indexOfActionToTrigger >= actions.count() )
-                {
-                    debug() << "no such action";
-                    return;
-                }
-                QAction *action = actions.value( indexOfActionToTrigger );
-                if( action )
-                    action->trigger();
-                return;
-            }
-        }
-    }
-
-    if( m_pd )
-    {
-        connect( m_pd, SIGNAL( fadeHideFinished() ), m_pd, SLOT( deleteLater() ) );
-        m_pd->hide();
-        m_pd = 0;
-    }
-
-    if( !m_expandToggledWhenPressed &&
-        event->button() != Amarok::contextMouseButton() &&
-        event->modifiers() == Qt::NoModifier &&
-        KGlobalSettings::singleClick() &&
-        model()->hasChildren( index ) )
-    {
-        m_expandToggledWhenPressed = !m_expandToggledWhenPressed;
-        setCurrentIndex( index );
-        setExpanded( index, !isExpanded( index ) );
-        event->accept();
-        return;
-    }
-    Amarok::PrettyTreeView::mouseReleaseEvent( event );
-}
-
-void
-PodcastView::mouseMoveEvent( QMouseEvent *event )
-{
-    if( event->buttons() || event->modifiers() )
-    {
-        Amarok::PrettyTreeView::mouseMoveEvent( event );
-        return;
-    }
-    event->accept();
-}
-
-void
-PodcastView::mouseDoubleClickEvent( QMouseEvent * event )
-{
-    QModelIndex index = indexAt( event->pos() );
-    if( !index.isValid() )
-    {
-        event->accept();
-        return;
-    }
-
-    if( model()->hasChildren( index ) )
-    {
-        if( event->button() != Amarok::contextMouseButton() &&
-            event->modifiers() == Qt::NoModifier )
-        {
-            setExpanded( index, !isExpanded( index ) );
-        }
-    }
-    else
-    {
-        QList<QAction *> actions =
-         index.data( PlaylistBrowserNS::PlaylistBrowserModel::ActionRole ).value<QList<QAction *> >();
-        if( actions.count() > 0 )
-        {
-            //HACK execute the first action assuming it's load
-            actions.first()->trigger();
-            actions.first()->setData( QVariant() );
-        }
-    }
-    event->accept();
-}
-
-void
-PodcastView::startDrag( Qt::DropActions supportedActions )
-{
-    DEBUG_BLOCK
-
-    // When a parent item is dragged, startDrag() is called a bunch of times. Here we prevent that:
-    m_dragMutex.lock();
-    if( m_ongoingDrag )
-    {
-        m_dragMutex.unlock();
-        return;
-    }
-    m_ongoingDrag = true;
-    m_dragMutex.unlock();
-
-    if( !m_pd )
-        m_pd = The::popupDropperFactory()->createPopupDropper( Context::ContextView::self() );
-
-    QList<QAction*> actions;
-
-    if( m_pd && m_pd->isHidden() )
-    {
-        actions = actionsFor( selectedIndexes() );
-
-        foreach( QAction *action, actions )
-            m_pd->addItem( The::popupDropperFactory()->createItem( action ) );
-
-        m_pd->show();
-    }
-
-    QTreeView::startDrag( supportedActions );
-    debug() << "After the drag!";
-
-    //We keep the items that the actions need to be applied to in the actions private data.
-    //Clear the data from all actions now that the context menu has executed.
-    foreach( QAction *action, actions )
-        action->setData( QVariant() );
-
-    if( m_pd )
-    {
-        debug() << "clearing PUD";
-        connect( m_pd, SIGNAL( fadeHideFinished() ), m_pd, SLOT( clear() ) );
-        m_pd->hide();
-    }
-    m_dragMutex.lock();
-    m_ongoingDrag = false;
-    m_dragMutex.unlock();
-}
-
-QList<QAction *>
-PodcastView::actionsFor( QModelIndexList indexes )
-{
-    QList<QAction *> actions;
-    foreach( QModelIndex idx, indexes )
-    {
-        QList<QAction *> idxActions =
-         idx.data( PlaylistBrowserNS::PlaylistBrowserModel::ActionRole ).value<QList<QAction *> >();
-        //only add unique actions model is responsible for making them unique
-        foreach( QAction *action, idxActions )
-        {
-            if( !actions.contains( action ) )
-                actions << action;
-        }
-    }
-    return actions;
-}
-
-void
-PodcastView::contextMenuEvent( QContextMenuEvent *event )
-{
-    QList<QAction *> actions = actionsFor( selectedIndexes() );
-
-    if( actions.isEmpty() )
-        return;
-
-    KMenu menu;
-    foreach( QAction *action, actions )
-    {
-        if( action )
-            menu.addAction( action );
-    }
-
-    menu.exec( mapToGlobal( event->pos() ) );
-    //We keep the items that the actions need to be applied to in the actions private data.
-    //Clear the data from all actions now that the PUD has executed.
-    foreach( QAction *action, actions )
-        action->setData( QVariant() );
-}
-
 #include "PodcastCategory.moc"
-
